# dsdev

./: main.py  pyproject.toml
Lesson02_Python-Basic/: Python_03_オブジェクトの基礎.ipynb
Lesson04_Statistics-Basic/: 課題1：基本統計量の計算.ipynb
Lesson05_Estimation/: 課題2：テストの成績の点推定と区間推定.ipynb
Lesson07_Graph/: 課題3：バッテリーの待受時間の仮説検定.ipynb
Lesson08_Anova/: 課題4：一元分散分析.ipynb  課題5：二元分散分析.ipynb
Lesson11_Simulation/: 課題7：サッカーの試合結果の予測.ipynb
Lesson13_Skills/: 課題8：住宅価格のデータ解析.ipynb
Lesson14_Original/: 最終課題：実践的なデータ解析.ipynb
dsdev/Lesson02_Python-Basic/: Python_02_Pythonの基礎.ipynb
dsdev/Lesson02_Python-Basic/00_orientation/: helloWorld.ipynb
